--- a/public/layout/pages/form.html
+++ b/public/layout/pages/form.html
@@ -28,6 +28,7 @@
 </script>
 <form  id="contactForm" action="/MANA/api/submitForm" method="POST">
     <div class="accordion">
+    <div class="accordion-item">
         <legend class="accordion-header">Información Personal Básica</legend>
         <div class="accordion-content">
             <label for="nombre">Nombre Completo:</label>
@@ -44,7 +45,7 @@
         </div>
     </div>
 
-    <div class="accordion">
+    <div class="accordion-item">
         <legend class="accordion-header">Conexión Personal con la Naturaleza</legend>
         <div class="accordion-content">
             <label for="frecuencia">¿Con qué frecuencia visitas áreas naturales?</label>
@@ -64,7 +65,7 @@
         </div>
     </div>
 
-    <div class="accordion">
+    <div class="accordion-item">
         <legend class="accordion-header">Acciones Personales para Proteger los Ecosistemas</legend>
         <div class="accordion-content">
             <label>¿Realizas alguna acción de conservación ambiental en tu vida diaria?</label>
@@ -89,7 +90,7 @@
         </div>
     </div>
     
-    <div class="accordion">
+    <div class="accordion-item">
         <legend class="accordion-header">Impacto y Contribución Personal</legend>
         <div class="accordion-content">
             <label for="arboles">Número de árboles o plantas que has plantado este año:</label>
@@ -112,7 +113,7 @@
         </div>
     </div>
 
-    <div class="accordion">
+    <div class="accordion-item">
         <legend class="accordion-header">Conocimiento y Educación Ambiental</legend>
         <div class="accordion-content">
             <label for="conocimiento">¿Cuánto conoces sobre la biodiversidad en tu área? (1-10):</label>
@@ -136,7 +137,7 @@
         </div>
     </div>
 
-    <div class="accordion">
+    <div class="accordion-item">
         <legend class="accordion-header">Metas Personales para el Futuro</legend>
         <div class="accordion-content">
             <label for="objetivos">¿Tienes algún objetivo personal para contribuir a la sostenibilidad en el próximo año?</label><br>
@@ -152,6 +153,7 @@
         <textarea id="comentarios" name="comentarios" rows="6" cols="50"></textarea><br><br>
 
     </div>
+</div>
 </div>
 <input type="submit" value="Enviar">
 </form>
