Se conecto el formulario

--- a/public/layout/pages/form.html
+++ b/public/layout/pages/form.html
@@ -10,9 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/form-styles.css">
+    <link rel="stylesheet" href="/MANA/public/layout/styles/form/form-styles.css">
 
-    
 </head>
 <body>
 <div class="container">
@@ -159,6 +158,6 @@
 </form>
 </div>
 
-<script src="js/form-script.js"></script>
+<script src="/MANA/public/layout/scripts/form/form-script.js"></script>
 </body>
 </html>
