--- a/public/layout/styles/form/form-styles.css
+++ b/public/layout/styles/form/form-styles.css
@@ -13,7 +13,7 @@ body {
     align-items: center;
     min-height: 100vh;
     flex-direction: column;  
-    background-image: url('../images/forest.jpg'); 
+    background-image: url('../../../images/form/forest.jpg'); 
     background-size: cover; 
     background-attachment: fixed;
     background-position: center; 
