--- a/public/layout/styles/landing/layout.css
+++ b/public/layout/styles/landing/layout.css
@@ -32,6 +32,7 @@ File: Layout CSS
 /* Page Intro
 --------------------------------------------------------------------------------------------------------------- */
 #pageintro{padding:200px 0 280px;}/* 280px => 80px for #introblocks negative margin */
+#AboutUs #pageintro{padding:200px 0 600px;}
 
 #pageintro article, #pageintro article p{display:block; max-width:75%; margin:0 auto; text-align:center;}
 #pageintro article p{max-width:65%; line-height:2rem;}
